metadata-retriever/metadata/objects/Account.object
<CustomObject>
    <fields>
        <fullName>MBFS_Car_Offered_Service__c</fullName>
        <label>MBFS Car Offered Service</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Body Repairer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>MBFS_Inactivation_Date__c</fullName>
        <label>MBFS Inactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MBFS_Reason_for_Inactivation__c</fullName>
        <label>MBFS Reason for Inactivation</label>
        <picklist>
            <picklistValues>
                <fullName>The franchise was transferred.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The franchised business ceased to operate.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The franchise agreement was terminated by the franchisor:</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The franchise agreement was terminated by the franchisee.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The franchise agreement was not renewed when it expired.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The franchised business was bought back by the franchisor.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The franchise agreement was terminated and the franchised business was acquired by the franchisor.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MBFS_Supporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBFS Supporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBFS_Truck_Offered_Service__c</fullName>
        <label>MBFS Truck Offered Service</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Body Repairer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>MB_Replacement_Date_del__c</fullName>
        <description>MB Replacement Date</description>
        <label>MB Replacement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Magazine_First__c</fullName>
        <description>Lifestyle Information
Magazine_First</description>
        <label>Magazine First</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Magazine_Second__c</fullName>
        <description>Lifestyle Information
Magazine Second</description>
        <label>Magazine Second</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status_del__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Customer&apos;s marital status 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_MaritalStatus&quot;</description>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Master_Record_ID__c</fullName>
        <label>Master Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Habits__c</fullName>
        <description>Media Habbits</description>
        <label>Media Habits</label>
        <picklist>
            <picklistValues>
                <fullName>Newspapers_Advertiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspapers_Age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspapers_Courier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspapers_Telegraph</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspapers_Herald</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspapers_Sydney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspapers_WA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites_Carpoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites_Carsales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites_Carsguide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites_Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites_MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites_Tradingpost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites_YahooDrive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Rigs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trucks Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diesel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia Transport News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trucking Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport Today</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest &amp; logger sawmiller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarry Magazine</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Minimum_per_Dealer__c</fullName>
        <label>Minimum per Dealer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mobile_Status__c</fullName>
        <description>value will be delivered in general by external sources, but can be maintained manually as well</description>
        <label>SMS / MMS / IM Status</label>
        <picklist>
            <picklistValues>
                <fullName>Invalid Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Model_of_Interest__c</fullName>
        <label>Model of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS Shooting Brake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLS AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All New A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLA-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLC-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLA-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart Fortwo Cabrio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart Fortwo Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprinter</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>NRL_Teams__c</fullName>
        <label>NRL Teams</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broncos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulldogs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cowboys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dragons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panthers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabbitohs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raiders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roosters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sea Eagles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warriors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Tigers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_No_SAP_Vehicle_Cars__c</fullName>
        <label>New No. SAP Vehicle Cars</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_No_SAP_Vehicle_Diplomatic__c</fullName>
        <label>New No. SAP Vehicle Diplomatic</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_No_SAP_Vehicle_Vans__c</fullName>
        <label>New No. SAP Vehicle Vans</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Dealer_Portal_Licenses__c</fullName>
        <label>No. of Dealer Portal Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: The person&apos;s profession 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_Occupation&quot;</description>
        <label>Occupation</label>
        <picklist>
            <picklistValues>
                <fullName>Office, enterprise and public institution responsible officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professionals &amp; Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business, Service staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Industry (Farming, Fishing, Forestry etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacture, transport equipment operation staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soldier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME&lt;10ppl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME&gt;10ppl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise management personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise common clerk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freelancers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opt_In_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PersonHasOptedInOfEmail, per default un checked</description>
        <label>Opt In Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_In_Hardcopy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PersonHasOptedOutOfHardCopy</description>
        <label>Opt In Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_In_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PersonHasOptedInOfPhone</description>
        <label>Opt In Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_In_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PersonHasOptedInOfSMS</description>
        <label>Opt In SMS/MMS/IM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_in_All_Channels__c</fullName>
        <description>/*
Created By Polaris Yu 2013-9-10
Function: to mark those accounts opt in all channels
Used By: Reports
*/</description>
        <formula>AND(Opt_In_Email__c, Opt_In_Hardcopy__c, Opt_In_Phone__c, Opt_In_SMS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>*Opt in All Channels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_in_at_least_One_Channel__c</fullName>
        <description>/* 
Created By Polaris Yu 2013-9-10 
Function: to mark those accounts opt in at least on channel
Used By: Reports 
*/</description>
        <formula>OR(Opt_In_Email__c, Opt_In_Hardcopy__c, Opt_In_Phone__c, Opt_In_SMS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>*Opt in at least One Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Dealerships_contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lifestyle Information
Other Dealerships contacted?</description>
        <label>Other Dealerships contacted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Hobby__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Hobbies, Interests, free text from DMS info 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Other Hobby</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <label>Other Information</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_No_Brand_Purchases__c</fullName>
        <description>PC &amp; CV No. Brand Purchases: These fields display the amount of purchases for MB PC  or CV the customer has made during the time frame first purchase and today. (frequency of calculation needs to be defined)</description>
        <label>PC No. Brand Purchases</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Status__c</fullName>
        <label>PC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Service Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PC_Tenure__c</fullName>
        <description>PC &amp; CV tenure: these fields display the endurance the customer stays with MB PC  or CV. Calculation is based on the first purchase date of MB PC  or CV (information available on the customer vehicle relationship) (frequency of calculation needs to be defined)</description>
        <label>PC Tenure</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_DOB__c</fullName>
        <label>Partner DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_First_Name__c</fullName>
        <label>Partner First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Surname__c</fullName>
        <label>Partner Surname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Title__c</fullName>
        <description>Partner Title - Should be the same values as used for the customer title</description>
        <label>Partner Title</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chaplain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colonel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulate General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Countess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate of the Late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Her Excellency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>His Excellency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honourable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lady</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant Colonel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madam</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Last_Modified_By__c</fullName>
        <description>The fields &quot;Last Updated By&quot; and &quot;Last Updated Date&quot; for each OptIn option are to be read only. They will be updated either via interface data load or the system will set the date and the user name into respective fields. The user name will be not be a lookup onto a really existing user as done for similar fields.</description>
        <label>Phone Last Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Last_Modified_Date__c</fullName>
        <description>The fields &quot;Last Updated By&quot; and &quot;Last Updated Date&quot; for each OptIn option are to be read only. They will be updated either via interface data load or the system will set the date and the user name into respective fields. The user name will be not be a lookup onto a really existing user as done for similar fields.</description>
        <label>Phone Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <label>Post Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_Dealer_ID__c</fullName>
        <displayFormat>SF-{0000000}</displayFormat>
        <externalId>true</externalId>
        <label>SF Dealer ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SMS_Last_Modified_By__c</fullName>
        <description>The fields &quot;Last Updated By&quot; and &quot;Last Updated Date&quot; for each OptIn option are to be read only. They will be updated either via interface data load or the system will set the date and the user name into respective fields. The user name will be not be a lookup onto a really existing user as done for similar fields.</description>
        <label>SMS/MMS/IM Last Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Last_Modified_Date__c</fullName>
        <description>The fields &quot;Last Updated By&quot; and &quot;Last Updated Date&quot; for each OptIn option are to be read only. They will be updated either via interface data load or the system will set the date and the user name into respective fields. The user name will be not be a lookup onto a really existing user as done for similar fields.</description>
        <label>SMS/MMS/IM Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Second_Make__c</fullName>
        <label>Second Make</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALFA ROMEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASTON MARTIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRAL DENNING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENTLEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CATERHAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CATERPILLAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHRYSLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITROEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAEWOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAIHATSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datsun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DENNIS EAGLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DODGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eunos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FERRARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOTON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FREIGHTLINER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREAT WALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HINO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOLDEN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Model</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Replace__c</fullName>
        <description>Lifestyle Information
Second Replace</description>
        <label>Second Replace</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Year__c</fullName>
        <description>Lifestyle Information
Second Year</description>
        <label>Second Year</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;1980</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1981</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1982</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1983</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1984</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1985</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1986</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1987</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1988</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>